# shinobi

./: .gitignore  CMakeLists.txt  configure.py
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: browse.cc  build.cc  build.h  build_log.cc  build_log.h  build_log_perftest.cc  build_log_test.cc  build_test.cc  canon_perftest.cc  clean.cc  clean.h  clean_test.cc  clparser.cc  clparser.h  clparser_perftest.cc  daemon.cc  daemon.h  daemon_exec.cc  dcache.cc  dcache.h  dcache_test.cc  depfile_parser.cc  depfile_parser.h  depfile_parser.in.cc  depfile_parser_perftest.cc  depfile_parser_test.cc  deps_log.cc  deps_log.h  deps_log_test.cc  disk_interface.cc  disk_interface.h  disk_interface_test.cc  dyndep.cc  dyndep.h  dyndep_parser.cc  dyndep_parser.h  dyndep_parser_test.cc  edit_distance.cc  eval_env.cc  eval_env.h  (+55 more)
